# Simple-OpenVR-Driver-Tutorial

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DummyController.cpp  DummyController.h  DummyHMD.cpp  DummyHMD.h  README.md  ServerDriver.cpp  ServerDriver.h  WatchdogDriver.cpp  WatchdogDriver.h  dllmain.cpp  driverFactory.cpp  driverFactory.h  install_driver.bat  readme.md  test_install.bat  uninstall_driver.bat
.github/workflows/: build.yml
01_basic_setup/: 01_basic_setup.md  CMakeLists.txt
01_basic_setup/include/: DriverFactory.hpp  FakeController.hpp  FakeHMD.hpp  ServerDriver.hpp
01_basic_setup/src/: FakeController.cpp  FakeHMD.cpp  ServerDriver.cpp
02_trackers/: 02_trackers.md  CMakeLists.txt
02_trackers/include/: FakeTracker.hpp  ServerDriver.hpp
02_trackers/src/: FakeTracker.cpp  ServerDriver.cpp
03_compositor/: .gitignore  03_compositor.md  CMakeLists.txt
03_compositor/include/: CompositorWindow.hpp  DXUtilities.hpp  Debug.hpp  DriverFactory.hpp  DriverLog.hpp  RenderThread.hpp  Rendering.hpp  ServerDriver.hpp  StepTimer.hpp  VirtualCompositor.hpp
03_compositor/src/: CompositorWindow.cpp  Debug.cpp  DllMain.cpp  DriverFactory.cpp  DriverLog.cpp  RenderThread.cpp  Rendering.cpp  ServerDriver.cpp  VirtualCompositor.cpp
FakeDecaMove/: CMakeLists.txt  fakemove.cpp  fakemove.h
FakeDecaMove/bindings/: fakemove_actions.json  fakemove_bindings_vive_tracker.json
HmdPipeExample/: Program.cs
HmdPipeExample/HmdPipeExample/: HmdPipeExample.sln
HmdPipeExample/HmdPipeExample/HmdPipeExample/: Program.cs
driver_example/driver/driver_tutorial_hmd/: driver.vrdrivermanifest
driver_example/driver/driver_tutorial_hmd/resources/localization/: localization.json
driver_example/src/Driver/: DeviceType.hpp  IVRDevice.hpp  IVRDriver.hpp
driver_example/src/Native/: DriverFactory.cpp  DriverFactory.hpp
driver_files/driver/apriltagtrackers/: driver.vrdrivermanifest
driver_files/driver/apriltagtrackers/resources/input/: example_controller_bindings.json  example_tracker_bindings.json  hipmove_bindings.json  steam.app.1012790.json  steam.app.1019550.json  steam.app.1039880.json  steam.app.1075400.json  steam.app.1090890.json  steam.app.1092430.json  steam.app.1294760.json  steam.app.1384320.json  steam.app.1386890.json  steam.app.1402320.json  steam.app.242760.json  steam.app.275850.json  steam.app.342180.json  steam.app.436320.json  steam.app.438100.json  steam.app.450540.json  steam.app.471710.json  steam.app.476700.json  steam.app.496240.json  steam.app.512220.json  steam.app.520010.json  steam.app.546560.json  steam.app.551700.json  steam.app.555160.json  steam.app.566860.json  steam.app.578620.json  steam.app.611670.json  steam.app.615120.json  steam.app.629730.json  steam.app.669290.json  steam.app.690810.json  steam.app.691260.json  steam.app.739630.json  steam.app.740250.json  steam.app.823500.json  steam.app.858260.json  steam.app.877200.json  (+3 more)
driver_files/driver/apriltagtrackers/resources/localization/: localization.json
driver_files/driver/apriltagtrackers/resources/rendermodels/example_controller/: example_controller.fbx  example_controller.mtl
driver_files/driver/example/: driver.vrdrivermanifest
driver_files/driver/example/resources/input/: example_controller_bindings.json  tutorial_tracker_bindings.json
driver_files/driver/example/resources/rendermodels/example_controller/: example_controller.mtl
driver_files/src/Driver/: ControllerDevice.cpp  ControllerDevice.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp  IVRDriver.hpp  Key.cpp  Key.hpp  TrackerDevice.cpp  TrackerDevice.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp  cmath_fix.h
driver_files/src/Native/: DriverFactory.cpp  DriverFactory.hpp
driver_tutorial_devices/driver/driver_tutorial_devices/: driver.vrdrivermanifest
driver_tutorial_devices/driver/driver_tutorial_devices/resources/input/: tutorial_controller_bindings.json
driver_tutorial_devices/src/Driver/: ControllerDevice.cpp  ControllerDevice.hpp  DeviceProvider.cpp  DeviceProvider.hpp  IVRDevice.hpp
driver_tutorial_devices/src/Native/: DriverFactory.hpp
driver_tutorial_hmd/driver/driver_tutorial_hmd/: driver.vrdrivermanifest
driver_tutorial_hmd/src/Driver/: DeviceProvider.cpp  DeviceProvider.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp
driver_tutorial_hmd/src/Native/: DriverFactory.cpp  DriverFactory.hpp
example/: CMakeLists.txt  example.cpp  example.h
hip_locomotion/: CMakeLists.txt  hiplocomotion.cpp  hiplocomotion.h
hip_locomotion/bindings/: hiplocomotion_actions.json  hiplocomotion_bindings_empty.json  hiplocomotion_bindings_generic.json  hiplocomotion_bindings_knuckles.json  hiplocomotion_bindings_vive_controller.json  hiplocomotion_bindings_vive_tracker.json
libraries/ipc/: Ipc.cpp  Ipc.hpp
